# fast_od

./: .gitignore  BatchStreamPPM.h  CMakeLists.txt  CalibrationTableSSD  LICENSE  README.md  argsParser.h  channel_first.cu  common.h  cpall.sh  dynlink_nvcuvid.cpp  infer_with_trt.cpp  inference_base.cpp  inference_base.h  inference_tf.cpp  inference_tf.h  inference_trt.cpp  inference_trt.h  main.cpp  run_tf.sh  run_trt.sh  run_trt_int8.sh  utils.cpp  utils.h
docker/: Dockerfile
docker/nvcuvid/: dynlink_cuda_cuda.h  dynlink_cuviddec.h  dynlink_nvcuvid.h
